# server/api/controllers/schedules/scheduleRouter.js
@@ -1,0 +1,9 @@
+import scheduleController from './scheduleController';
+import * as express from 'express';
+
+
+export default express
+    .Router()
+    .get('/:id', scheduleController.getById)
+    .put('/:id', scheduleController.updateSchedule)
+    .delete('/:id', scheduleController.deleteSchedule)
