# server/common/api.yml
@@ -809,7 +809,7 @@ paths:
     get:
       tags:
         - Tuition Schedules
-      summary: get all tuition schedules of specified user
+      summary: fetch all tuition schedules of specified user
       parameters:
         - in: path
           name: id
@@ -827,7 +827,6 @@ paths:
           $ref: '#/responses/Unauthorized'
         404:
           $ref: '#/responses/NotFound'
-
     post:
       tags:
         - Tuition Schedules
@@ -856,6 +855,76 @@ paths:
         404:
           $ref: '#/responses/NotFound'
   
+  /schedules/{id}:
+    get:
+      tags:
+        - Tuition Schedules
+      summary: fetch the tuition schedules of specified user
+      parameters:
+        - in: path
+          name: id
+          type: string
+          description: tuition schedule Id
+        - in: header
+          name: authorization
+          required: true 
+          type: string
+          description: Bearer <token>
+      responses:
+        200:
+          description: OK
+        401:
+          $ref: '#/responses/Unauthorized'
+        404:
+          $ref: '#/responses/NotFound'
+    put:
+      tags:
+        - Tuition Schedules
+      summary: update the specified tuition schedule
+      parameters:
+        - in: path
+          name: id
+          type: string
+          description: tuition schedule Id
+        - in: header
+          name: authorization
+          required: true 
+          type: string
+          description: Bearer <token>
+        - in: body
+          name: schedule
+          required: true
+          schema:
+            $ref: '#/definitions/TuitionScheduleBody'
+      responses:
+        200:
+          description: OK
+        401:
+          $ref: '#/responses/Unauthorized'
+        404:
+          $ref: '#/responses/NotFound'
+    delete:
+      tags:
+        - Tuition Schedules
+      summary: delete the specified tuition schedule
+      parameters:
+        - in: path
+          name: id
+          type: string
+          description: tuition schedule Id
+        - in: header
+          name: authorization
+          required: true 
+          type: string
+          description: Bearer <token>
+      responses:
+        200:
+          description: OK
+        401:
+          $ref: '#/responses/Unauthorized'
+        404:
+          $ref: '#/responses/NotFound'
+   
 
  
 # Descriptions of common responses
